name:                gamesontwitch-test
version:             0
synopsis:            webdriver tests for gamesontwitch.tv
-- description:         
homepage:            http://gamesontwitch.tv
-- license:             
license-file:        LICENSE
author:              Adam Curtis
maintainer:          acurtis@spsu.edu
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable gamesontwitch-test
  main-is: Main.hs
  build-depends:       base ==4.6.*
                     , webdriver >= 0.6.0.4